objects/CSS_accountLanguage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CSS_EDSLanguage__c</fullName>
        <label>CSS_EDSLanguage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_QsolLanguage__c</fullName>
        <label>CSS_QsolLanguage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_userLanguage__c</fullName>
        <label>CSS_userLanguage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL_CDSLanguage__c</fullName>
        <label>CDSLanguage__c</label>
        <type>TextArea</type>
    </fields>
    <label>CSS_accountLanguage</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CSS_userLanguage__c</columns>
        <columns>FSL_CDSLanguage__c</columns>
        <columns>CSS_QsolLanguage__c</columns>
        <columns>CSS_EDSLanguage__c</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>